--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,15 @@
     <string name="Feedback">反馈</string>
     <string name="About_us">关于我们</string>
     <string name="Awesome_list">爆款清单</string>
+    <string name="Awesome_Place">网红打卡圣地</string>
     <string name="Local_Specialty">本地特色</string>
     <string name="Recommended_Restaurant">特色餐厅</string>
+    <string name="Local">位置</string>
+    <string name="Introduce">介绍</string>
+    <string name="Sight">风景</string>
+    <string name="Parking">停车场</string>
+    <string name="information">信息</string>
+    <string name="Service">服务</string>
+    <string name="Open_Time">营业时间</string>
+    <string name="All_Day">全天</string>
 </resources>
